--- a/index.html
+++ b/index.html
@@ -9,5 +9,11 @@
 <body>
     <h1>My title</h1>
     <button id="alert-btn">Show alert</button>
+
+    <div class="wrapper">
+        <article>
+            <h2>This is an article</h2>
+        </article>
+    </div>
 </body>
 </html>
